--- a/src/app/capabilities/data-analytics/data-analytics.component.html
+++ b/src/app/capabilities/data-analytics/data-analytics.component.html
@@ -9,7 +9,7 @@
                     Enabling these outcomes is an experienced team with skills in Data Strategy development, Data Science &amp; Engineering, Visualisation and User Interface design, Data Management and Data Architecture and software development.</p>
           </div>
           <div class="col-md-6">
-              <img class="image-fluid" src="../../../assets/images/datat-analytics-sub-image.jpg"/>
+              <img class="image-fluid" src="/../../../assets/images/datat-analytics-sub-image.jpg"/>
           </div>
     </div>
  </div>
