--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
       <div class="row">
         <div class="col-md-4 d-flex">
-          <img src="../../assets/images/logo-with text.PNG" class="logo-box" alt="sun software & Data Solutions">
+          <img src="/../../assets/images/logo-with text.PNG" class="logo-box" alt="sun software & Data Solutions">
         </div>
         <div class="col-md-5">
           <ul class="nav justify-content-between list-unstyled d-flex" style="padding-top: 8px;">
