--- a/src/app/industries/energy/energy.component.html
+++ b/src/app/industries/energy/energy.component.html
@@ -13,7 +13,7 @@
                 <p>Our teams combine global market insight, deep industry knowledge and capabilities in strategy, data analytics, process and technology to deliver material results.</p>
                  <p></p></div>
          <div class="col-md-6">
-             <img class="image-fluid" src="../../../assets/images/energy-sub-images.jpg"/>
+             <img class="image-fluid" src="/../../../assets/images/energy-sub-images.jpg"/>
          </div>
    </div>
 </div>
