--- a/src/app/industries/government-services/government-services.component.html
+++ b/src/app/industries/government-services/government-services.component.html
@@ -9,7 +9,7 @@
                   <p></p>
           </div>
           <div class="col-md-6">
-              <img class="image-fluid" src="../../../assets/images/government images-1.jpg"/>
+              <img class="image-fluid" src="/../../../assets/images/government images-1.jpg"/>
           </div>
     </div>
  </div>
