--- a/src/app/capabilities/project-management/project-management.component.html
+++ b/src/app/capabilities/project-management/project-management.component.html
@@ -13,7 +13,7 @@
                  <p></p>
           </div>
           <div class="col-md-6">
-              <img class="image-fluid" src="../../../assets/images/16.jpg"/>
+              <img class="image-fluid" src="/../../../assets/images/16.jpg"/>
           </div>
     </div>
  </div>
