--- a/src/app/industries/product-services/product-services.component.html
+++ b/src/app/industries/product-services/product-services.component.html
@@ -8,7 +8,7 @@
                      <p></p>
           </div>
           <div class="col-md-6">
-              <img class="image-fluid" src="../../../assets/images/Product-services-sub-Image.jpg"/>
+              <img class="image-fluid" src="/../../../assets/images/Product-services-sub-Image.jpg"/>
           </div>
     </div>
  </div>
