--- a/src/app/capabilities/customer-digital/customer-digital.component.html
+++ b/src/app/capabilities/customer-digital/customer-digital.component.html
@@ -11,7 +11,7 @@
                     <p></p>
           </div>
           <div class="col-md-6">
-              <img class="image-fluid" src="/../../../assets/images/6.jpeg"/>
+              <img class="image-fluid" src="assets/images/6.jpeg"/>
           </div>
     </div>
  </div>
