--- a/src/app/capabilities/technology-transformation/technology-transformation.component.html
+++ b/src/app/capabilities/technology-transformation/technology-transformation.component.html
@@ -7,7 +7,7 @@
                     We help harness data, systems and infrastructure to improve time to market, increase agility, reduce costs, meet regulatory demands and improve customer experience.</p>
           </div>
           <div class="col-md-6">
-              <img class="image-fluid" src="/../../../assets/images/tech-transformation-sub-images.jpg"/>
+              <img class="image-fluid" src="assets/images/tech-transformation-sub-images.jpg"/>
           </div>
     </div>
  </div>
