--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,8 +12,8 @@
              </div>
              <div class="col-12 col-md-6 col-lg-7 home-image-content" data-wow-delay="0.75s" style="visibility: visible; animation-delay: 0.75s; animation-name: fadeIn;">
                 <picture>
-                    <source media="(min-width:768px)" srcset="/../../assets/images/ClimateChange-Sustainability.jpg">
-                    <img src="/../../assets/images/ClimateChange-Sustainability.jpg" alt="">              
+                    <source media="(min-width:768px)" srcset="assets/images/ClimateChange-Sustainability.jpg">
+                    <img src="assets/images/ClimateChange-Sustainability.jpg" alt="">              
                 </picture>
             </div>
         </div>
