--- a/src/app/industries/financial-services/financial-services.component.html
+++ b/src/app/industries/financial-services/financial-services.component.html
@@ -8,7 +8,7 @@
                      <p></p>
           </div>
           <div class="col-md-6">
-              <img class="image-fluid" src="/../../../assets/images/financial-services.jpg"/>
+              <img class="image-fluid" src="assets/images/financial-services.jpg"/>
           </div>
     </div>
  </div>
