--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light nav-color fixed-top">
     <div class="nav-logo-wrapper me-auto">
          <div class="logo-container">
-            <img src="/../../assets/images/sunsoftware.jpeg" class="logo-box" alt="sun software & Data Solutions">
+            <img src="assets/images/sunsoftware.jpeg" class="logo-box" alt="sun software & Data Solutions">
             <h2 class="header-container"> Sun Software & Data Solutions</h2>
          </div>
     </div>
