--- a/src/app/capabilities/operational-excellance/operational-excellance.component.html
+++ b/src/app/capabilities/operational-excellance/operational-excellance.component.html
@@ -8,7 +8,7 @@
                     <p></p>
           </div>
           <div class="col-md-6">
-              <img class="image-fluid" src="/../../../assets/images/operation excellance-Sub-Images.jpg"/>
+              <img class="image-fluid" src="assets/images/operation excellance-Sub-Images.jpg"/>
           </div>
     </div>
  </div>
