--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,50 +6,52 @@
             <h2 class="header-container"> Sun Software & Data Solutions</h2>
          </div>
     </div>
-   <div class="header-right-wrapper"> 
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+   <!--<div class="header-right-wrapper"> -->
+      <button class="navbar-toggler"  type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <i class="fa-solid fa-bars" *ngIf="showIcon" (click)="showIcon = !showIcon"></i>
+        <i class="fa-solid fa-times" *ngIf="!showIcon" (click)="showIcon = !showIcon"></i>
       </button>
     
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <div class="collapse navbar-collapse custom-width-menu" id="navbarNavDropdown" *ngIf="!showIcon">
         <ul class="navbar-nav me-auto">
           <li class="nav-item dropdown">
             <a  class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" 
               aria-haspopup="true" aria-expanded="false">
               <span class="right-header-cust">About us</span></a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" routerLink="/about-us/who-we-are">Who we are</a></li>
-                <li><a class="dropdown-item" href="#">Divirsity and Inclusion</a></li>
-                <li><a class="dropdown-item" href="#">Locations</a></li>
+                <li><a class="dropdown-item" routerLink="/about-us/who-we-are" [routerLinkActive]="['isActive']" (click)="enableMenu()">Who we are</a></li>
+                <li><a class="dropdown-item" [routerLinkActive]="['isActive']" (click)="enableMenu()">Divirsity and Inclusion</a></li>
+                <li><a class="dropdown-item" [routerLinkActive]="['isActive']" (click)="enableMenu()">Locations</a></li>
               </ul>
           </li>
           <li class="nav-item">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" 
-            aria-haspopup="true" aria-expanded="false"><span class="right-header-cust">Industries</span></a>
+            aria-haspopup="true" aria-expanded="false"><span class="right-header-cust"
+            [ngClass]="{'isActive':childOneInd.isActive || childTwoInd.isActive || childThreeInd.isActive || childFourInd.isActive}">Industries</span></a>
             <ul class="dropdown-menu menu-align">
-                <li><a class="dropdown-item" routerLink="/industries/energy">Energy, utilities and resources </a></li>
-                <li><a class="dropdown-item" routerLink="/industries/finance">Financial services </a></li>
-                <li><a class="dropdown-item" routerLink="/industries/product">Products and services </a></li>
-                <li><a class="dropdown-item" routerLink="/industries/government">Government and public sector </a></li>
+                <li><a class="dropdown-item" routerLink="/industries/energy" [routerLinkActive]="['isActive']"  #childOneInd ="routerLinkActive" (click)="enableMenu()">Energy, utilities and resources </a></li>
+                <li><a class="dropdown-item" routerLink="/industries/finance" [routerLinkActive]="['isActive']" #childTwoInd ="routerLinkActive" (click)="enableMenu()">Financial services </a></li>
+                <li><a class="dropdown-item" routerLink="/industries/product" [routerLinkActive]="['isActive']"  #childThreeInd ="routerLinkActive" (click)="enableMenu()">Products and services </a></li>
+                <li><a class="dropdown-item" routerLink="/industries/government" [routerLinkActive]="['isActive']"  #childFourInd ="routerLinkActive" (click)="enableMenu()">Government and public sector </a></li>
               </ul>
           </li>
           <li class="nav-item">
             <a a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" 
-            aria-haspopup="true" aria-expanded="false"><span class="right-header-cust">Capabilities</span></a>
+            aria-haspopup="true" aria-expanded="false"><span class="right-header-cust" [ngClass]="{'isActive':childOneCap.isActive || childTwoCap.isActive || childThreeCap.isActive || childFourCap.isActive || childFiveCap.isActive}">Capabilities</span></a>
                <ul class="dropdown-menu menu-align">
-                <li><a class="dropdown-item" routerLink="/capabilities/customer-digital">Customer and digital</a></li>
-                <li><a class="dropdown-item" routerLink="/capabilities/data-analytics">Data, analytics and AI</a></li>
-                <li><a class="dropdown-item" routerLink="/capabilities/technology-transformation">Technology transformation</a></li>
-                <li><a class="dropdown-item" routerLink="/capabilities/operational-excellance">Operational excellence and intelligent automation</a></li>
-                <li><a class="dropdown-item" routerLink="/capabilities/project-management">Project and programme management</a></li>
+                <li><a class="dropdown-item" routerLink="/capabilities/customer-digital" [routerLinkActive]="['isActive']" #childOneCap ="routerLinkActive" (click)="enableMenu()">Customer and digital</a></li>
+                <li><a class="dropdown-item" routerLink="/capabilities/data-analytics" [routerLinkActive]="['isActive']" #childTwoCap ="routerLinkActive"  (click)="enableMenu()">Data, analytics and AI</a></li>
+                <li><a class="dropdown-item" routerLink="/capabilities/technology-transformation" [routerLinkActive]="['isActive']" #childThreeCap ="routerLinkActive"  (click)="enableMenu()">Technology transformation</a></li>
+                <li><a class="dropdown-item" routerLink="/capabilities/operational-excellance" [routerLinkActive]="['isActive']" #childFourCap ="routerLinkActive"  (click)="enableMenu()">Operational excellence and intelligent automation</a></li>
+                <li><a class="dropdown-item" routerLink="/capabilities/project-management" [routerLinkActive]="['isActive']" #childFiveCap ="routerLinkActive"  (click)="enableMenu()">Project and programme management</a></li>
                </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/get-in-touch"><span class="right-header-cust">Get in touch</span></a>
+            <a class="nav-link" routerLink="/get-in-touch" [routerLinkActive]="['isActive']"><span class="right-header-cust">Get in touch</span></a>
           </li>
         </ul>
       </div>
-    </div>
+    <!--</div>-->
   </nav>
 </div>
 
