--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,3 +1,12 @@
 .logo-box{
     width: 100%;
 }
+
+@media (max-width: 480px) {
+    .custom-width-full {
+      width: 100%;
+    }
+    .f-l {
+        float: left;
+    }
+} 
