--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,7 +6,7 @@
         </div>
         <div class="col-md-5">
           <ul class="nav justify-content-between list-unstyled d-flex" style="padding-top: 8px;">
-            <li>
+            <li class="custom-width-full">
               © 2023 Sun software & Data Solutions
             </li>
             <li>
@@ -18,7 +18,7 @@
           </ul>
         </div>
         <div class="col-md-3" style="padding-top: 8px;">
-          <ul class="nav justify-content-end list-unstyled">
+          <ul class="nav justify-content-end list-unstyled f-l">
             <li>connect us on</li>
             <li class="ms-3"><a class="" href="#"><i class="fa-brands fa-twitter"></i></a></li>
             <li class="ms-3"><a class="" href="#"><i class="fa-brands fa-linkedin"></i></a></li>
